--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>UX/UI Designer</p>
 
 
-        <p class="view"><a href="https://github.com/amlux">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/amlux">View GitHub Profile</a></p>
 
       </header>
       <section>
