--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Alonso Loera</h1>
-        <p>UX/UI Designer</p>
+        <h2>UX/UI Designer</h2>
 
 
         <p class="view"><a href="https://github.com/amlux">View GitHub Profile</a></p>
