--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Here's Some Cool Stuff</h3>
 
-<p><p></p><a href='http://postimg.org/image/fnnmnvd5b/' target='_blank'><img src='http://s19.postimg.org/fnnmnvd5b/test_sketch.jpg' border='0' alt="test sketch" /></a></p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p><div><a href='http://postimg.org/image/fnnmnvd5b/' target='_blank'><img src='http://s19.postimg.org/fnnmnvd5b/test_sketch.jpg' border='0' alt="test sketch" /></a></div>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>The UX Process</h3>
